--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.1.3",
     "expo": "~46.0.9",
     "expo-clipboard": "~3.1.0",
     "expo-font": "~10.2.0",
